# palautusrepositorio

./: README.md  TAG_INFO.md
viikko1/nhl-statistics/src/: .coverage  index.py  statistics_service.py
viikko1/nhl-statistics/src/tests/: test_statistics_service.py
viikko1/riippuvuuksien-injektointi/: .coverage
viikko1/riippuvuuksien-injektointi/src/: laskin.py
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/git-branch-harjoitus/: LICENSE  README.md  index.py
viikko2/nhl-reader/: README.md  demo.py  pyproject.toml
viikko2/nhl-reader/src/: index.py  nhl_app.py  player.py  player_reader.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/login/: log.html  output.xml  report.html
viikko3/login/src/services/: user_service.py
viikko3/login/src/tests/: register.robot  resource.robot
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/: MOCK_SUMMARY.md  mock_demo.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/: review.md  vibe.md
viikko5/tennis/src/: tennis_game.py
viikko6/laskin/src/: kayttoliittyma.py  komennot.py
viikko6/query-language/src/: index.py  matchers.py
viikko7/: agent.md
viikko7/kivi-paperi-sakset-original/src/: index.py  kivi_paperi_sakset.py  kps_pelaaja_vs_pelaaja.py
viikko7/kivi-paperi-sakset/src/: kps_parempi_tekoaly.py  kps_tekoaly.py  peli_tehdas.py
