[project]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = [
    {name = "Kirin Pörsti",email = "117549816+KirinPoersti@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "sqlalchemy (==1.4.54)",
    "fastapi (>=0.121.2,<0.122.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
